--- a/success page/style.css
+++ b/success page/style.css
@@ -6,10 +6,11 @@
 }
 
 body {
-    background-image: url(power-color-260nw-365429198.jpg);
+    background-image: url(black.png);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    background-repeat: no-repeat;
+    height: 100%;
     width: 100%;
 }
 
@@ -17,13 +18,15 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 80%;
+    width: 100%;
     padding: 25px 13%;
     background: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    background-color: black;
+    opacity: 0.6;
 
 }
 
@@ -32,16 +35,13 @@ header {
     font-size: 30px;
     margin-right: 30px;
     text-decoration: none;
-    color: rgb(46, 44, 44);
-    text-shadow: 0 0 20px #ff9900,
-        0 0 30px #ff6600, 0 0 40px #ff3300,
-        0 0 50px #ff0000;
+    color: cyan
 }
 
 .navbar a {
     position: relative;
     font-size: 20px;
-    color: orangered;
+    color: cyan;
     margin-right: 30px;
     text-decoration: none;
 }
@@ -63,4 +63,50 @@ header {
 .navbar a:hover:after {
     transform: translateY(0);
     opacity: 1;
+}
+
+.main {
+
+    width: 65%;
+    margin: auto;
+    position: relative;
+    height: 350px;
+    text-align: center;
+    background-color: black;
+    opacity: 0.6;
+    border-radius: 20px;
+}
+
+.text {
+    color: cyan;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 250px;
+    padding-top: 50px;
+}
+.para{
+    font-size: 15px;
+}
+
+H2 {
+    text-transform: uppercase;
+}
+
+.btn {
+    width: 200px;
+    padding: 10px;
+    margin-top: 50px;
+    border-radius: 20PX;
+    background-color: aqua;
+    border: 1px solid cyan;
+    font-size: 18px;
+    color: black;
+    font-weight: bolder;
+}
+
+.btn:hover {
+    box-shadow: 0 0 75px cyan;
+    transform: scale(1.1)
+
 }
