--- a/success page/style.css
+++ b/success page/style.css
@@ -9,6 +9,7 @@ body {
     background-image: url(black.png);
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
@@ -64,17 +65,61 @@ header {
     transform: translateY(0);
     opacity: 1;
 }
+.line{
+    width: 100px;
+    height: 2px;
+    background-color: #ff0000;
+    display: none;
+}
 
 .main {
 
     width: 65%;
     margin: auto;
     position: relative;
-    height: 350px;
+    height: 30%;
     text-align: center;
     background-color: black;
-    opacity: 0.6;
     border-radius: 20px;
+    position: relative;
+    /* padding: 1px; */
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+.main::after,
+.main::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: conic-gradient(from var(--angle), #ff4545, #00ff99, #006aff, #ff0095, #ff4545, cyan);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 5px;
+    border-radius: 20px;
+    animation: 3s spin linear infinite;
+}
+
+.main::before {
+    filter: blur(1.5rem);
+    opacity: 0.5;
+}
+
+@keyframes spin {
+    from {
+        --angle: 0deg;
+    }
+
+    to {
+        --angle: 360deg;
+    }
 }
 
 .text {
@@ -85,8 +130,10 @@ header {
     margin-top: 250px;
     padding-top: 50px;
 }
-.para{
+
+.para {
     font-size: 15px;
+    padding: 5px;
 }
 
 H2 {
@@ -96,17 +143,64 @@ H2 {
 .btn {
     width: 200px;
     padding: 10px;
-    margin-top: 50px;
+    margin-top: 40px;
     border-radius: 20PX;
     background-color: aqua;
     border: 1px solid cyan;
     font-size: 18px;
     color: black;
     font-weight: bolder;
+    margin-bottom: 12px;
 }
 
 .btn:hover {
     box-shadow: 0 0 75px cyan;
     transform: scale(1.1)
+}
 
+@media only screen and (max-width: 800px) {
+    .logo {
+        font-size: 25px;
+    }
+
+    .navbar a {
+        font-size: 15px;
+    }
+
+    h1,
+    h2 {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .para {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .navbar a {
+        font-size: 10px;
+    }
+
+    h1,
+    h2 {
+        font-size: 15px;
+    }
+}
+@media only screen and (max-width: 550px){
+    .navbar a{
+        display: none;
+
+    }
+         h1,
+         h2 {
+             font-size: 10px;
+         }
+         
+         .btn{
+            width: 150px;
+            padding: 8px;
+         }
 }
